# rag-samples

./: README.md  pyproject.toml
dataset/: about.txt  cultural.txt  social_responsibility.txt  sports.txt
samples/: 1_basic_llm_call.py  2_sparse_embeddings.py  3_dense_embeddings.py  4_rag_flow.py  5_rag_ui.py
