[tool.poetry]
name = "rag-samples"
version = "1.0.0"
description = ""
authors = ["Tejas Venugopal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "1.46.0"
scikit-learn = "1.5.2"
sentence-transformers = "3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
