[tool.poetry]
name = "rag-samples"
version = "1.0.0"
description = ""
authors = ["Tejas Venugopal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "1.46.0"
scikit-learn = "1.5.2"
sentence-transformers = "3.1.1"
faiss-cpu = "1.8.0.post1"
gradio = "4.44.0"
text-chunker = "0.2.2"
nltk = "3.9.1"
cleantext = "1.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
